Moved install/build/cleanup into the same RUN argument This has decreased overall image size from 1.43GB to 1GB

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,8 @@ version: '2.4'
 
 services:
     gns3:
-        image: 'samburney/gns3'
+        image: 'samburney/gns3:latest'
+        restart: 'unless-stopped'
         build: '.'
         privileged: true
         network_mode: 'host'
